recommendation photos upgrade

--- a/styles/components.css
+++ b/styles/components.css
@@ -14,7 +14,7 @@
 }
 
 
-.go-back {
+.homepage {
     position: absolute;
     top: 20px; /* Adjust the distance from the top */
     right: 20px; /* Aligns the button to the right within the container */
