--- a/styles/page_specific/homepage.css
+++ b/styles/page_specific/homepage.css
@@ -1,3 +1,6 @@
+@import url('variables.css');
+
+
 
 .profile-container {
     display: flex;
@@ -18,19 +21,19 @@
     text-align: center;
     margin: 50px 0;
     padding: 20px;
-    background-color: #f0f4f3;
+    background-color: var(--card-background-color);
     border-radius: 10px;
 }
 
 .recommendation-section h2 {
     font-size: 2em;
-    color: #00796b; /* Matches your overall theme */
+    color: var(--primary-color);
     margin-bottom: 15px;
 }
 
 .recommendation-section p {
     font-size: 1.2em;
-    color: #333;
+    color: var(--text-color-dark);
     margin: 0 auto; /* Center the paragraph horizontally */
     width: 80%; /* Adjust width to control the size of the paragraph block */
     max-width: 700px; /* Optional max width for larger screens */
@@ -55,12 +58,12 @@
 .institutions-section {
     text-align: center;
     padding: 50px 0;
-    background-color: #f9f9f9;
+    background-color: var(--card-background-color);
 }
 
 .institutions-section h2 {
     font-size: 2.5rem;
-    color: #00796b;
+    color: var(--primary-color);
     margin-bottom: 30px;
 }
 
@@ -94,20 +97,21 @@
 
 .institution-card h3 {
     font-size: 1.5rem;
-    color: #333;
+    color: var(--text-color-dark);
     margin-bottom: 10px;
 }
 
 .institution-card p {
+    text-align: center;
     font-size: 1rem;
-    color: #666;
+    color: var(--text-color-dark);
     margin-bottom: 20px;
 }
 
 .institution-card .btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #00796b;
+    background-color: var(--primary-color);
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -115,7 +119,8 @@
 }
 
 .institution-card .btn:hover {
-    background-color: #005f55;
+    background-color: var(--primary-color-dark);
+
 }
 
 
@@ -125,7 +130,7 @@
     width: auto;                    /* Set width to auto for centering */
     max-width: 300px;              /* Optional: Limit max width for better appearance */
     padding: 10px;
-    background-color: #00796b;
+    background-color: var(--primary-color);
     color: white;
     border: none;
     border-radius: 5px;
@@ -138,7 +143,7 @@
 }
 
 .course-btn:hover {
-    background-color: #005f55; /* Darker green on hover */
+    background-color: var(--primary-color-dark); /* Darker green on hover */
 }
 
 /* Courses List */
@@ -172,7 +177,7 @@
 
 
 .courses-list li {
-    background-color: #f0f0f0;
+    background-color: white;
     padding: 8px 10px;
     margin: 5px 0;
     border-radius: 4px;
@@ -188,7 +193,7 @@
 
 
 .institution-card .btn:hover {
-    background-color: #005f55;
+    background-color: var(--primary-color-dark);
 }
 
 
@@ -244,7 +249,7 @@
     position: absolute;
     top: 15px;
     right: 35px;
-    color: #ffffff;
+    color: white;
     font-size: 40px;
     font-weight: bold;
     cursor: pointer;
@@ -252,7 +257,7 @@
 
 .close:hover,
 .close:focus {
-    color: #bbbbbb;
+    color: var(--text-color-bright);
     text-decoration: none;
     cursor: pointer;
 }
